hphp/hack/test/typecheck/unset_typechecks_arg.php
<?hh // partial

function f(array<string, string> $a): void {
  unset($a[0]);
}
